--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 .env
 node_modules/
+logs/winston.app.log
+logs/winston.error.log
+
+# macOS system files
+.DS_Store
+**/.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
