--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node app.js"
   },
   "engines": {
-    "node": "12.19.0"
+    "node": ">=20.13.1"
   },
   "keywords": [],
   "author": "",
@@ -16,18 +16,19 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^2.4.1",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.8.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.7",
-    "nodemailer": "^6.4.17",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
+    "nodemailer": "^7.0.9",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "normalize-port": "^1.0.0",
+    "winston": "^3.13.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SeifeldinZook/Sarahah.git"
